docs: EC2 환경에서 Kafka 실행 가이드